# backblaze_status

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: .gitignore  ghtoken
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/backblaze_status/: __init__.py  backup_file.py  backup_file_list.py  backup_results.py  backup_status.py  backup_status_mainwindow.py  backup_status_old.py  bz_batch.py  bz_data_table_model.py  bz_last_files_transmitted.py  bz_lastfilestransmitted.py  bz_log_file_watcher.py  bz_prepare.py  bz_transmit.py  bztransmit.py  check_backup.py  chunk_dialog.py  chunk_model.py  chunk_table.py  clean.py  completed_files.py  configuration.py  consolidate_move_file_list.py  constants.py  css_styles.py  current_state.py  db_backup_file.py  db_bz_batch.py  db_chunks.py  db_session.py  db_to_do_files.py  dev_debug.py  diskdata.py  display.py  exceptions.py  locks.py  main_backup_status.py  movefiles.py  movefiles_app.py  movefiles_main.py  (+34 more)
src/backblaze_status.changed/: __init__.py
tests/: _test_backblaze_status.py  _test_db_to_do_files.py  no_test_DevDebug.py  test_backblaze_status.py  test_backup_file.py
